--- a/app/src/main/res/drawable/ic_adicionar_24.xml
+++ b/app/src/main/res/drawable/ic_adicionar_24.xml
@@ -1,3 +1,9 @@
+<!--
+  ~ Copyright (c) 2023. Created by alexsander at 12/22. All rights reserved.
+  ~ GitHub: https://github.com/alexsanderfer/
+  ~ Portfolio: https://alexsanderfer.netlify.app/
+  -->
+
 <vector android:height="24dp" android:tint="#FFFFFF"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
